[package]
name = "raytracer"
version = "0.1.0"
authors = ["Amartya Bose <amartya.bose@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "*"
itertools = "*"
rayon = "*"
rand = "*"
rand_distr = "*"
serde = "1.0.130"
serde_json = "1.0.68"
serde_derive = "1.0.130"